# MARS-n2D-code

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  beforeCommit.sh  check.sh  clear.sh  compile.sh  debugconfigure.sh  drawCircle.m  drawCircle2.m  format.sh  init.sh  makefile  parallelTest.sh  readVecYinSet.asv  releaseconfigure.sh  releaseconfigureOptnone.sh  test.sh  vcpkg-clang-toolchain.cmake  vcpkg-configuration.json  vcpkg-gcc-toolchain.cmake  vcpkg.json
src/: CMakeLists.txt
src/Core/: Box.h  CMakeLists.txt  Config.cpp  Config.h  Curve.cpp  Curve.h  FitCurve.h  HighPrecisionAdd.h  HighPrecisionNumber.cpp  HighPrecisionNumber.h  Interval.h  Linearization.h  MultivariatePolynomial.h  Polynomial.h  RowSparse.h  SolvePeriodicTri.h  SolveTri.h  Tensor.h  TensorExpr.h  TensorSlice.h  Vec.h  VecCompare.h  Wrapper_LAPACKE.h  Wrapper_OpenMP.h  dirConfig.h  dirConfig.h.in  numlib.cpp  numlib.h  static_for.h
src/GeometricFlow/: CMakeLists.txt  DiscreteVecCoDimOne.h  DiscreteVecCurvature.h  DiscreteVecCurvatureLaplacian.h  DiscreteVecCurvatureLaplacianNew.h  DiscreteVecCurvatureLaplacianOld.h  FlowHelper.cpp  FlowHelper.h  VectorForCurvatureFlow.h  VectorForSurfaceDiffusionFlow.h  VectorForSurfaceDiffusionFlowNew.h  VectorOnHypersurface.h  VelocityTest.h
src/GeometricFlow/doc/: Eigenvalues_0.0005.eps  Eigenvalues_0.002.eps  Eigenvalues_0.006.eps  Eigenvalues_0.eps  MARS2D_design_document.tex  MARS2D_design_document_new.aux  MARS2D_design_document_new.out  MARS2D_design_document_new.tex  MARS2D_design_document_new2.aux  MARS2D_design_document_new2.out  MARS2D_design_document_new2.tex  surface_difussion_math.aux  surface_difussion_math.out  surface_difussion_math.tex
src/GeometricFlow/report/: CurvatureFlowVelocity_test.tex  star.eps
src/InterfaceTracking/: #MARS.cpp#  CMakeLists.txt  ComputeError.h  DIRK.h  ERK.h  ExplicitRK.h  MARS.cpp  MARS.h  MARS2D.cpp  MARS2D.h  MARS2DIML.cpp  MARS2DIML.h  MARS2DIMV.cpp  MARS2DIMV.h  MARS2DLIST.cpp  MARS2DLIST.h  MARSn2D.h  RKButcher.cpp  RKButcher.h  TestExample.h  TimeIntegrator.h  VectorFactory.h  VectorFunction.h  VelocityField.h  XorArea.cpp  XorArea.h  generatefiner.m  tmpcode.h
src/InterfaceTracking/doc/: MARS2D_design_document.tex  surface_difussion_math.tex
src/Marsn2D/: CMakeLists.txt  Elements.h  HLGeneratorFactory.h  InterfaceGraph.cpp  InterfaceGraph.h  InterfaceGraphFactory.h  MARSReadJson.hpp  MARSn2D.cpp  MARSn2D.h  Mars.h  OrientedJordanCurve.h  Yinset.h
src/Recorder/: CMakeLists.txt  CPUTimeHelper.h  EventRecorder.cpp  EventRecorder.h  ProgressBar.h  Recorder.cpp  Recorder.h  SpdlogWrapper.cpp  SpdlogWrapper.h  StageRecorder.cpp  StageRecorder.h  Timer.h  indicators.h
src/YinSet/: CMakeLists.txt  CutCellHelper.h  OrientedJordanCurve.cpp  OrientedJordanCurve.h  PastingMap.cpp  PastingMap.h  PointsLocater.cpp  PointsLocater.h  Segment.h  SegmentedRealizableSpadjor.cpp  SegmentedRealizableSpadjor.h  SegmentsIntersector.cpp  SegmentsIntersector.h  SimplicialComplex.h  YinSet.cpp  YinSet.h
test/: CMakeLists.txt  TestBA.cpp  TestCurveFactory.cpp  TestCutCell.cpp  TestFL.cpp  TestIT.cpp  TestInterfaceGraph.cpp  TestLocater.cpp  TestLocater.h  TestMARSn2D.cpp  TestOrientedJordanCurve.cpp  TestOrientedJordanCurve.h  TestPrecision.cpp  TestSegmentsIntersector.H  TestSegmentsIntersector.cpp  TestYinSetsBooleanOps.H  TestYinSetsBooleanOps.cpp  UnitTest.cpp  catch_amalgamated.cpp  catch_amalgamated.hpp  makefile  mars_readJson.hpp  testCurve.cpp  testHeader.h  testPolynomial.cpp
test/config/: Disk0VortexT12Order4.json  Disk0VortexT8Order4.json  Disk2DeformationT2Order4.json  Disk2VortexT8Order4.json  Disk4Vortex12.json  Disk4Vortex16.json  Disk4Vortex4.json  Disk4Vortex8.json  Disk4VortexT12Order4.json  Disk4VortexT12Order6.json  Disk4VortexT12Order8.json  Disk4VortexT16Order4.json  Disk4VortexT16Order6.json  Disk4VortexT16Order8.json  Disk4VortexT4Order4.json  Disk4VortexT4Order4Dynamic.json  Disk4VortexT4Order6.json  Disk4VortexT4Order8.json  Disk4VortexT8Order4.json  Disk4VortexT8Order6.json  Disk4VortexT8Order8.json  Disk5Deformation2.json  Disk5Deformation4.json  Disk5DeformationT2Order4.json  Disk5DeformationT2Order4Dynamic.json  Disk5DeformationT2Order4HL.json  Disk5DeformationT2Order4K=h.json  Disk5DeformationT2Order4Richard.json  Disk5DeformationT2Order6.json  Disk5DeformationT2Order8.json  Disk5DeformationT4Order4.json  Disk5DeformationT4Order4Dynamic.json  Disk5DeformationT4Order6.json  Disk5DeformationT4Order8.json  Graph41DeformationT2Order4.json  Graph41DeformationT2Order6.json  Graph41DeformationT2Order8.json  Graph41DeformationT4Order4.json  Graph41DeformationT4Order4Dynamic.json  Graph41DeformationT4Order6.json  (+52 more)
test/data/: testCurveFactory0.input  testCurveFactory1.input  testCurveFactory2.input  testOrientedJordanCurve-1.input  testOrientedJordanCurve-2.input  testOrientedJordanCurve-3.input  testOrientedJordanCurve0.input  testOrientedJordanCurve1.input  testOrientedJordanCurve2.input  testOrientedJordanCurve3.input
test/data1/: Graph41.input  Graph412.input  Graph4_1.input  Panda.txt  Pig.input  Pig.json  Raccoon-bak.input  Raccoon.input  jsonInput.md  pig.json  raccoon.json  raccoonNew.json  raccoonV2.json
test/matlab/: Graph41.m  GraphRaccoon.m  bezierCurve.m  bezierPoint.m  constructSmoothCurves.m  construct_spline.m  cubic_spline_matrix.m  getColor.m  graph1.m  graph2.m  graph3.m  inverseBezier.m  main.m  moveFigure.m  multiPhasePlot.m  not_a_knot_interpolation.m  parse_geometry_json_interface.md  plotMarks.m  plotPolynomial.m  plotYinSet.m  ppFromPolygon.m  ppder_eval.m  print_pp_derivatives.m  quinticSpline.m  quintic_periodic_spline.m  readCellVolume.m  readVecYinSet.m  readYinSet.m  run_cubic_spline_demo.m  saveFiguresAsFrames.m  savepp.m  solve_periodic_fft.m  spline_condition_test.m  sympoly2pp.m  test_construct_spline.m  visualize_curves.m  writepp.m
test/matlab/complexGraph/: GraphPig.m  boundary_contains.m  build_boundaries_from_F.m  build_containment_tree.m  build_yinset.m  build_yinset.md  collect_subtree.m  constructSmoothCurves.m  constructSmoothCurves_interface.md  (+16 more)
(+62 files in other folders)
